# lambda-calculus-interpreter-in-ocaml

./: LICENSE  README.md  alan-interpreter.opam  dune  dune-project  expr.ml  interpreter.ml  lexer.ml  package.json  parser.mly  typ.ml
_esy/default/: build  install  installation.json  pnp.js
_esy/default/cache/: project-a72f9c3a12921bf4cb2a81c33536f19c
esy.lock/: index.json
